[gd_scene load_steps=2 format=3 uid="uid://b2o62ybymunau"]

[ext_resource type="Script" uid="uid://dsp5e78uqoqqm" path="res://ui/save_element.gd" id="1_ahut3"]

[node name="SaveElement" type="Control"]
custom_minimum_size = Vector2(0, 49)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_ahut3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="bt_load" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Load"

[node name="file" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "the name the name the name the name the name the name the name the name the name the name the name the name"
clip_text = true

[node name="label" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "the name the name the name the name the name the name the name the name the name the name the name the name"
clip_text = true

[node name="bt_save" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Save"

[node name="bt_delete" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Delete"

[connection signal="pressed" from="MarginContainer/HBoxContainer/bt_load" to="." method="_on_bt_load_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/bt_save" to="." method="_on_bt_save_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/bt_delete" to="." method="_on_bt_delete_pressed"]
